--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Guess</title>
 </head>
-<body>
+<body id="body">
   <div id="root"></div>
   <script src="./src/app.js"></script>
 </body>
